fix logo stretching on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+md-sidenav.sidemenu {
+  min-width: 250px;
+  width: 250px;
+}
+md-sidenav.sidemenu .logo {
+  width: 100%;
+}
+
 .md-toolbar-tools label,
 .md-toolbar-tools input {
   color: inherit !important;
